hphp/hack/test/typecheck/array/array_as_tuple_bad.php
<?hh // partial
/**
 * Copyright (c) 2018, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

function as_array((int, string) $x): array {
  return $x;
}
